--- a/front/src/app/components/private/user/request/request-saving/info-request-saving/info-request-saving.component.html
+++ b/front/src/app/components/private/user/request/request-saving/info-request-saving/info-request-saving.component.html
@@ -100,7 +100,7 @@
     </div>
   </div>
   <div class="d-grid gap-2 mt-3">
-    <button class="btn btn-primary" [disabled]="infoForm.invalid || isSubmitting" type="submit">
+    <button class="btn btn-success" [disabled]="infoForm.invalid || isSubmitting" type="submit">
       <ng-container *ngIf="!isSubmitting; else loadingTemplate">
         Guardar Información Personal
       </ng-container>
