--- a/front/src/app/components/private/admin/components/manage-users/manage-users.component.css
+++ b/front/src/app/components/private/admin/components/manage-users/manage-users.component.css
@@ -2,3 +2,16 @@ h1 {
     color: #00823d;
     font-weight: bold;
 }
+
+.nav-pills .nav-link {
+    color: green;
+}
+
+.nav-pills .nav-link.active {
+    background-color: green;
+}
+
+
+.nav-link.active {
+    color: white;
+}
