--- a/front/src/app/components/private/user/components/user-info/user-info.component.html
+++ b/front/src/app/components/private/user/components/user-info/user-info.component.html
@@ -49,7 +49,7 @@
           aria-expanded="true"
           aria-controls="collapseContact"
         >
-          Autorización de Contacto (Ley 2300)
+          Autorización de Contacto (Ley 2300 de 2023)
         </button>
       </h2>
       <div
