Update file list button color and scroll bar style

--- a/front/src/app/components/private/admin/components/file-list/file-list.component.html
+++ b/front/src/app/components/private/admin/components/file-list/file-list.component.html
@@ -13,7 +13,7 @@
               <tr *ngFor="let file of files">
                   <td>{{ file }}</td>
                   <td>
-                      <button (click)="downloadFile(file)" class="btn btn-primary">Descargar</button>
+                      <button (click)="downloadFile(file)" class="btn btn-success">Descargar</button>
                   </td>
               </tr>
           </tbody>
