--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -14,3 +14,22 @@ app-navbar {
   background: rgba(119, 119, 119, 0.207);
 }
 
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f0f0f0;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #999;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
