Update calendar buttons in reports

--- a/front/src/app/components/private/admin/users-report/components/users-info-filter/users-info-filter.component.html
+++ b/front/src/app/components/private/admin/users-report/components/users-info-filter/users-info-filter.component.html
@@ -6,6 +6,7 @@
       placeholder="Fecha Inicio"
       inputId="startDate"
       [showIcon]="true"
+      [iconDisplay]="'input'" 
       [dateFormat]="'yy-mm-dd'"
     ></p-calendar>
   
@@ -14,6 +15,7 @@
       placeholder="Fecha Fin"
       inputId="endDate"
       [showIcon]="true"
+      [iconDisplay]="'input'" 
       [dateFormat]="'yy-mm-dd'"
     ></p-calendar>
   
