Add table styles in admin credits

--- a/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.css
+++ b/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.css
@@ -38,3 +38,12 @@ h1 {
   border-color: rgba(250, 182, 0, 1);
   color: white;
 }
+
+.p-datatable table {
+  font-size: 0.875rem;
+}
+
+.p-datatable td, 
+.p-datatable th {
+  padding: 0.5rem;
+}
