move table styles to global css

--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -33,3 +33,12 @@ app-navbar {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.p-datatable table {
+  font-size: 0.875rem;
+}
+
+.p-datatable td, 
+.p-datatable th {
+  padding: 0.5rem;
+}
