Change color button to users search component

--- a/front/src/app/components/private/admin/users-report/components/users-search/users-search.component.css
+++ b/front/src/app/components/private/admin/users-report/components/users-search/users-search.component.css
@@ -3,7 +3,12 @@ h4 {
     font-weight: bold;
 }
 
-button {
+.custom-btn {
     background-color: #00823d;
     border-color: #00823d;
+}
+
+.custom-btn:hover {
+    background-color: #008f43;
+    border-color: #008f43;
 }
