--- a/front/src/app/components/private/admin/users-report/components/users-search/users-search.component.html
+++ b/front/src/app/components/private/admin/users-report/components/users-search/users-search.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row mb-3">
         <div class="col-md-6">
-            <button class="btn btn-primary" (click)="getUserInfo()" [disabled]="isLoading">
+            <button class="btn btn-primary custom-btn" (click)="getUserInfo()" [disabled]="isLoading">
                 {{ isLoading ? 'Buscando...' : 'Buscar información del asociado' }}
             </button>
         </div>
