Fix in natural person component

--- a/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
@@ -84,7 +84,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="otroLugarNacimiento" class="form-label required-label">Lugar de nacimiento</label>
+          <label for="otroLugarNacimiento" class="form-label">Lugar de nacimiento</label>
           <input formControlName="otroLugarNacimiento" type="text" class="form-control"/>
         </div>
       </div>
