Fix comunication notification

--- a/front/src/app/components/private/user/components/user-info/user-info.component.html
+++ b/front/src/app/components/private/user/components/user-info/user-info.component.html
@@ -57,7 +57,10 @@
         class="accordion-collapse collapse show"
       >
         <div class="accordion-body">
-          <app-contact (notifyParent)="showContactNotification()"></app-contact>
+          <app-contact
+          (notifyParent)="showContactNotification()" 
+          (clearNotification)="clearContactNotification()">
+          </app-contact>
         </div>
       </div>
     </div>    
